--- a/package.json
+++ b/package.json
@@ -12,23 +12,34 @@
     "@auth/mongodb-adapter": "^2.0.0",
     "@aws-sdk/client-s3": "^3.879.0",
     "@aws-sdk/s3-request-presigner": "^3.879.0",
+    "@google-cloud/storage": "^7.17.0",
     "@hookform/resolvers": "^3.3.4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/google-cloud__storage": "^2.3.1",
+    "@types/nodemailer": "^7.0.1",
+    "@vimeo/vimeo": "^3.0.3",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "dropbox": "^10.34.0",
+    "googleapis": "^159.0.0",
+    "i18next": "^25.5.2",
     "lucide-react": "^0.400.0",
     "mongodb": "^6.0.0",
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
     "next": "15.5.2",
     "next-auth": "^4.24.5",
+    "next-i18next": "^15.4.2",
+    "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
+    "react-i18next": "^15.7.3",
     "react-player": "^2.14.1",
     "recharts": "^2.12.0",
+    "resend": "^6.0.2",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
