--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "resend": "^6.0.2",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
+    "zeptomail": "^6.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
